--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header a:hover{
 /* Showcase */
 #Showcase{
   min-height:400px;
-  background:url('../img/showcase.jpg') no-repeat 0 -400px;
+  background:url('showcase.jpg') no-repeat 0 -400px;
   text-align:center;
   color:#ffffff;
 }
